말 이동 규칙 및 버그 수정